# pilkki

./: Readme.md
.github/workflows/: cmake-multi-platform.yml  pilkki-software-multiplatform.yml  rust-cargo-deny.yml  rust-clippy.yml  rust-test-macos.yml  rust-test.yml
electronics/: Readme.md
firmware/: Readme.md
software/: CMakeLists.txt  Cargo.toml  Readme.md
